- [x]  remove input and replace with searchHeader component - [x]  fix searchHeader styling to more accurately reflect the mockups - [x]  try to get rid of gap around grid - [x]  complete styling tweaks for all views - [x]  fix forward arrow alignment issue in mobile view - [x]  Final look over before review and merge

--- a/src/components/searchHeader/searchHeader.scss
+++ b/src/components/searchHeader/searchHeader.scss
@@ -6,11 +6,10 @@
 .header__wrap {
     display: flex;
     flex-direction: column;
-    // border-bottom: 1px solid variables.$secondary-border-color;
-    padding: .5rem 1rem 0 1rem;
+    padding: 1rem 1rem 0 1rem;
 
     h1 {
-        margin: .5rem .5rem .5rem 0;
+        margin: 0 .5rem .5rem 0;
     }
     .input__wrap {
         position:relative;
@@ -18,7 +17,7 @@
         input {
             display: block;
             border-radius: 22px;
-            margin-bottom: 1rem;
+            margin-bottom: .5rem;
             padding: .25rem 1rem;
             font-size: 12px;
             width: 100%;
@@ -64,7 +63,7 @@
 
             input {
                 display: block;
-                margin: 2rem 0 1rem 4rem;
+                margin: 1.5rem 0 1rem 4rem;
                 padding: .25rem 1rem;
                 font-size: 12px;
                 width: 9rem;
@@ -75,6 +74,9 @@
 
             button {
                 background-color: white;
+                top: 1.5rem;
+                margin: 0 0 0 .5rem;
+
 
             }
 
@@ -86,7 +88,7 @@
         }
 
         button {
-            margin: 2rem 0 0 .5rem;
+            margin: 1.5rem 0 0 .5rem;
             padding: .4rem;
             font-size: 12px;
             height: 1.75rem;
@@ -99,24 +101,23 @@
 
     @include desktop {
         display: flex;
-        // flex-direction: row;
         align-items: center;
-        margin: 2rem 0 1rem 0;
         padding: 0 1.5rem;
-        justify-content: space-between;
 
         h1 {
             font-size: 50px;
+            margin-right: 3rem;
         }
 
         .input__wrap {
+            margin-top: .5rem;
 
             input {
                 display: block;
-                margin: 0 0 0 11rem;
+                margin: 0 .5rem 0 10rem;
                 padding: .25rem 1rem;
-                font-size: 12px;
-                width: 13rem;
+                font-size: 13px;
+                width: 15rem;
                 height: 2rem;
                 outline: none;
                 border: 1px solid variables.$secondary-border-color;
@@ -128,6 +129,7 @@
               top: .4rem;
               height:.5rem;
               width: .5rem;
+              margin: 0 0 0 .5rem;
 
             }
 
@@ -135,11 +137,11 @@
 
 
         button {
-            margin: 0 0 0 .5rem;
+            margin: 0.5rem 0 0 .5rem;
             padding: 0 1rem;
-            font-size: 12px;
+            font-size: 13px;
             height: 2rem;
-            width: auto;
+            width: 9rem;
         }
     }
 
